--- a/src/stories/button.css
+++ b/src/stories/button.css
@@ -9,7 +9,7 @@
 }
 .storybook-button--primary {
   color: white;
-  background-color: #e41b10;
+  background-color: #102ce4;
 }
 .storybook-button--secondary {
   color: #333;
